services/frontend/app-chaldea/src/components/pages/BattlePage/CharacterSide/CharacterInventory/InventoryItem/InventoryItem.module.scss
@use "../../../../../../global.scss" as *;

.item_wrapper {
  position: relative;
  width: 60px;
  height: 60px;

  &:hover {
    .tooltip {
      display: block;
      opacity: 1;
    }
  }
}

.item {
  overflow: hidden;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  font-size: 10px;
  cursor: pointer;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  background: linear-gradient(
                  180deg,
                  rgba(118, 166, 189, 0) 0%,
                  #76A6BD 100%
  );

  &.cooldown {
    position: relative;
    opacity: 0.3;
  }
}

.cooldown_status {
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;
  font-weight: 500;
  font-size: 12px;
  text-transform: uppercase;
  content: '';
  position: absolute;
  width: 24px;
  height: 28px;
  top: -10px;
  right: -12px;
  background-image: url("../../../../../../assets/cooldown-arrows.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.tooltip_close {
  border: none;
  background: none;
  font-size: 32px;
  cursor: pointer;
  color: #fff;
  z-index: 200;
}

.tooltip_header {
  display: flex;
  align-items: center;
  gap: 5px;
}

.tooltip_content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;

  h4 {
    @include gold-text;
    font-size: 16px;
  }

  .all_list {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1px;

    span {
      color: #76A6BD;
    }

    ul {
      display: flex;
      flex-direction: column;
      gap: 1px;
    }

    .inner_list {
      gap: 5px;

      li {
        display: flex;
        flex-direction: column;
        gap: 1px;
        position: relative;

        &:not(:last-child) {
          @include vertical-gradient-line($bottom: -3px, $top: unset, $left: 0, $right: 0, $width: 100%, $height: 1px);

        }
      }
    }

    .blue {
      color: var(--blue);
    }

    .red {
      color: var(--red);
    }

    li {
      display: flex;
      gap: 5px;
    }
  }
}

